# sekai-live2d-updater

./: .gitignore  bundle.py  config.example.py  helpers.py  main.py  pyproject.toml  webhook.py  worker.py
utils/: live2d.py
