[tool.poetry]
name = "sekai-live2d-updater"
version = "0.1.0"
description = "Fetch and update Live2D for Project Sekai Colorful Stage"
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "*"
unitypy = "*"
u-msgpack-python = "*"
pycryptodome = "*"
anyio = "*"
orjson = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
